--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
 			<!--span> Something went wrong! Please try again,</span></div-->
 
 	<div class="contact-section">
-		
-	
+
+
 		<div class="contact-info">
-			
-		
-			<div><i class="fas fa-map-marker-alt"></i>Address,City,Country</div>
-			<div><i class="fas fa-envelope"></i>contact@gmail.com</div>
-			<div><i class="fas fa-phone"></i>+00 0000 000 000</div>
+
+
+			<div><i class="fas fa-map-marker-alt"></i>Greater Noida, UP</div>
+			<div><i class="fas fa-envelope"></i>cinemakebu@gmail.com</div>
+			<div><i class="fas fa-phone"></i>+99 58 XX XX XX</div>
 		</div>
 		<div class="contact-form">
 			<h2> Contact Us </h2>
